--- a/src/app/global.css
+++ b/src/app/global.css
@@ -11,7 +11,10 @@
     --hover-color: #F0F0F0;
 
 
-    --navigation-text-size: 1.5rem;
+    --navigation-text-size-mobile: 1.5rem;
+    --navigation-text-size-desktop: 0.875rem;
+
+    --button-text-size: 0.875rem;
 }
 
 * {
@@ -24,4 +27,22 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
+}
+
+@media screen and (max-width: 767px) {
+    .not_mobile {
+        display: none !important;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1439px) {
+    .not_tablet {
+        display: none !important;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .not_desktop {
+        display: none !important;
+    }
 }
